# tools

./: .gitignore  :q  Check_header_guards_and_copyright.py  README.md  code_coverage.py  compiler.pl  configure_rosetta_repo.sh  emacs_init.el  find_includes.pl  git_revision_parser.py  hack_replace.pl  include_guard.pl  promote_lib.pl  prune_empty_svn.bash  ralph-build.pl  renumber_pdb.py  scons_to_makefile.pl  super_duper_patch.patch  view_commit_log.py  write_options_py.py
AmbRose/: AmbRose.py  README.md  example.py  setup.py
ERRASER/: SWA_rebuild.py  SWA_rebuild_erraser.py  convert_to_phenix_python  convert_to_sys_python  erraser.py  erraser_analysis.py  erraser_minimize.py  erraser_option.py  erraser_single_res.py  erraser_single_res_analysis.py  erraser_util.py  erraser_wrapper.py  full_struct_minimize.py  full_struct_slice_and_minimize.py  measure_params.py  rna_decompose.py  rna_rosetta_ready_set.py  rna_rosetta_to_pdb.py  seq_rebuild.py
GREMLIN/: Gremlin2RosettaTensor.py  gremlin.py
JD0/: README  README.md  allpdbs.random.l.processed.head  allpdbs.random.l.unprocessed.head  log_processing_notes  setup.bash  submitter.bash  todo
PyRosetta/: DeployPyRosetta.py
PyRosetta.develop/: DeployPyRosetta.py
SWA_RNA_python/: SWA_cat_outfiles.py
analysis/: compute_pnear.py  contactMapTools.py  extract_pdbs_from_pdbsilent_by_tags.py  get_top_models.py
ann_tools/: README.md  cat_sdfs.py  compute_csv_tables.py  default_features.object  default_results.object  make_bcl_inputs_for_plotting.py  make_bcl_roc_plots.py  make_datasets.py  score_sdf.py  sort_sdfs.py
antibody/: .gitignore  DunbrakNorth_antibody_CDR_medianpdb.txt  H3flex.R  H3flex.py  README.md  abH3.flags  abH3.sbatch  anarci2rosetta.py  angles.sc  antibody.py  antibody_functions.zsh  antibody_repertoire.py  antibody_repertoire_H3launcher.bash  antibody_repertoire_graft.bash  antibody_repertoire_metrics_postprocess.bash  antibody_rmsds.py  calcDihed.c  chothia_mapping.pl.L211  chothia_mapping_v2.pl  chothia_renumber_v2.pl  classification_H3.example  classification_H3.pl  color_cdrs_dun_aho.pml  colorcdr.pml  colorcdr.py  colorcdrs.py  compare_grafts.py  compare_sequences.py  convert_pdb_to_antibody_numbering_scheme.py  create_antibody_db.py  kink_constraints.py  kink_geom.py  kink_plots.R  launch_h3_modeling.py  make_angle_distances.py  parse_identifyCDRs_appoutput.py  plot_comparisons.R  repertoires.unison  superimpose_interface.py
antibody-update/: README.md  compare_info_files.py  create_antibody_db.py  pdbids.txt  plot_comparisons.R
beta-peptide/: create_beta_peptide_params.py  make_beta_peptide_bbdep.py
carbohydrates/: GLYCAM_code_generator.py  README.txt  carbohydrate_code_generator.py  carbohydrate_data.py  glycam.codes
chem_xrw/: README  README.md  check_logs.py  zero_nres_parser.sh
clang/: README.txt  clang.py
clang_ast_transform/: README  README.BUILDING  README.HOWTO_USE_PTRS  README.OBSERVATIONS  README.PTR-REWRITE  add_serialization_code.sh  add_xsd_stubs.py  apply_replacements.php  clang_35.patch  code_qual_check_file.sh  code_reader.py  code_utilities.py  create_serialization_unit_test_stub.py  debug_run_rrt_matchers_on_file.sh  dump_ast.sh  emit_ast.sh  extract_serialization_data.sh  find_classes_for_creators.py  fork_manager.py  inclusion_equivalence_sets.py  (+22 more)
clang_ast_transform/rosetta-refactor-tool/: CMakeLists.txt  Makefile  RosettaRefactorTool.cpp  ast_matchers.hh  matchers_base.cc  matchers_base.hh  matchers_call_operator.hh  matchers_cast_from_new.hh  matchers_cast_in_assignment.hh  matchers_ctor_initializer.hh  matchers_dynamic_cast.hh  matchers_implicit_cast_assignment.hh  matchers_implicit_cast_class_member_calls.hh  matchers_implicit_cast_constructor.hh  matchers_implicit_cast_decl.hh  matchers_implicit_cast_from_new.hh  matchers_implicit_cast_generic.hh  matchers_match_test.hh  matchers_member_calls.hh  matchers_not_operator.hh  matchers_op_to_void_ptr.hh  matchers_pointer_name.hh  matchers_typedef.hh  matchers_void_ptr_operator.hh  utils.cc  utils.hh
clang_ast_transform/rosetta-refactor-tool/matchers/: CMakeLists.txt  call_operator.hh  cast_from_new.hh  cast_in_assignment.hh  ctor_initializer.hh  datamap_get.hh  dynamic_cast.hh  find_bad_pointer_casts.hh  find_calls.hh  find_naked_ptr_op_casts.hh  find_this_into_op.hh  member_calls.hh  not_operator.hh  pointer_name.hh  test.hh  typedef.hh
clang_ast_transform/rosetta-refactor-tool/matchers/code_quality/: bad_pointer_casts.cc  bad_pointer_casts.hh  naked_ptr_op_casts.cc  naked_ptr_op_casts.hh  obj_on_stack.cc  obj_on_stack.hh
clang_ast_transform/rosetta-refactor-tool/matchers/find/: CMakeLists.txt  calls.cc  calls.hh  constructor_decl.cc  constructor_decl.hh  field_decl.cc  field_decl.hh  record_decl.cc  record_decl.hh  self_ptr_in_ctor.cc  self_ptr_in_ctor.hh  serialization_funcs.cc  serialization_funcs.hh
clang_ast_transform/rosetta-refactor-tool/matchers/rewrite/: add_serialization_code.cc  add_serialization_code.hh  call_operator.cc  call_operator.hh  cast_from_new.cc  cast_from_new.hh  cast_from_new_expr.cc  cast_from_new_expr.hh  cast_from_new_vardecl.cc  cast_from_new_vardecl.hh  cast_in_assignment.cc  cast_in_assignment.hh  ctor_initializer.cc  ctor_initializer.hh  datamap_get.cc  datamap_get.hh  dynamic_cast.cc  dynamic_cast.hh  dynamic_pointer_cast_from_void.cc  dynamic_pointer_cast_from_void.hh  member_calls.cc  member_calls.hh  not_operator.hh  pointer_name.cc  pointer_name.hh  pose_dynamic_cast.cc  pose_dynamic_cast.hh  real_comparison.cc  real_comparison.hh  typedef.cc  typedef.hh
clang_ast_transform/rosetta-refactor-tool/original_tool/: CMakeLists.txt  RosettaRefactorTool.cpp  RosettaRefactorTool.hh
clang_ast_transform/rosetta-refactor-tool/serialization_validator/: CMakeLists.txt  all_members_serialized_validator.cc
(+4933 files in other folders)
